Rewrite plan service in Java (#5)
After much deliberation and two Rust prototypes we decided to use Java for
Web APIs. This ports existing Plan service to Java.

All of the standard requests are available starting at this base URL:
http://localhost:8000/api/plans/ including:

* GET
* POST
* PUT
* PATCH
* DELETE

The POST request takes two optional querystring parameters which will cause
the Plan service to _import_ an Activity Type from a running Adaptation server
instance, and use the Activity Type as a base for any additional details that
are in the POST body. The two querystring parameters must both be specified or
the import cannot happen. They are as follows:

* `adaptationId` - id of an Adaptation as defined in a request to the
   Adaptation service at http://localhost:8081/api/adaptation/
* `activityTypeId` - The _key_ of an Activity Type as defined by the Adaptation
  service request to http://localhost:8081/api/adaptation/<id>/activities/

Standard operations are also available for Activity Instances at
http://localhost:8000/api/plans/<planId>/activity_instances/ including:

* GET
* POST
* PUT
* PATCH
* DELETE

Also, delete the old Rust version.

Testing
--------

Start the service (either with maven or via IntelliJ Idea). Then make all of
the standard requests as outlined above using Postman, Curl, etc.